[package]
name = "getters"
version = "0.1.1"
description = "Rust Getters Derive Macro: Effortlessly auto-generate customizable getter methods for Rust structs"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/PFAhard/getters"
documentation = "https://docs.rs/getters0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"

[lib]
proc-macro = true
